Only report issue on beans with stereotype annotations